--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,17 @@
     -->
     <title>Kristoshka</title>
   </head>
-  <body style="margin: 0; height: 100vh; display:flex; justify-content: center; align-items: center;">
+  <!-- NOTE: I added the styles below so that the outermost container takes up all available
+  space, and so that I can center my app on the screen  -->
+  <body
+    style="
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
